# corpus-agent

./: .gitignore  README.md  api_test.py  main.py  pyproject.toml
corpus_postgres/: docker-compose.yml  import_subset_to_postgres.py  schema.sql  setup_opensearch.py
scripts/: sample_corpus.py  setup_dataset.sh
src/: main.py  mocked_tools.py  pipeline.py  tools_backend.py
src/viz/: artifacts.py  code_runner.py  codegen.py  db.py  extra_metadata_glimpse.py  planner.py  runs.py  schema_summary.py
